--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:exported="false" />
         <activity
             android:name=".student.StudentDashboardActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.USPENROLME"/>
         <activity
             android:name=".shared.LoginActivity"
             android:exported="false"
