--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
         android:allowBackup="true"
+        android:enableOnBackInvokedCallback="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +17,7 @@
         android:theme="@style/Theme.USPENROLME"
         tools:targetApi="31">
         <activity
-            android:name=".manager.ManagerDashboardAcitivity"
+            android:name=".manager.ManagerDashboardActivity"
             android:exported="false" />
         <activity
             android:name=".student.StudentDashboardActivity"
